fix(flashsale): preserve nullable outbox trace state